--- a/data/common.yaml
+++ b/data/common.yaml
@@ -18,7 +18,7 @@ znapzend::service_log_file: '/var/log/znapzend/znapzend.log'
 znapzend::service_name: 'znapzend'
 znapzend::service_pid_dir: '/var/run/znapzend'
 znapzend::service_pid_file: '/var/run/znapzend/znapzend.pid'
-znapzend::service_reload_cmd: "service znapzend reload"
+znapzend::service_reload_cmd: 'service znapzend reload'
 znapzend::sudo_d_path: '/etc/sudoers.d'
 znapzend::user_home: '/home/znapzend'
 znapzend::user_shell: '/bin/bash'
